updates chevron down for menu to only apply to nav

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -134,7 +134,7 @@ li.dropdown.last {
   margin: 0 40px 0 50px;
 }
 
-.fa-chevron-down {
+i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   color: #007dc3;
   padding: 2px 0 0;
 }
