--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -521,7 +521,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   li.dropdown {
     border-right: 2px solid #4cb4f2;
     font-size: 0.75em;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-bottom:10px;
     padding: 5px 0px;
     border-bottom: none;
   }
