--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -242,9 +242,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 }
 
 #content-nav #search-input .button:hover {
-  color: #cdadd9;
+  color: #808080;
   ::-webkit-input-placeholder {
-    color: gray;
+    color: #808080;
   }
 
   :-moz-placeholder {
@@ -275,7 +275,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   font-family: 'Open Sans';
   font-size: 12px;
   letter-spacing: 1.2px;
-  color: #FFF;
+  color: #202020;
   border: 0;
 }
 
@@ -436,8 +436,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 }
 
 .gobutton #searchGoLink.disableGoButton {
-  color: #919195 !important;
-  /*cursor: default !important;*/
+  color: #cbcbcb !important;
+  background-color: #efefef !important;
+  cursor: inherit;
 }
 
 .fa-bars {
