--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -488,13 +488,54 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
     font-weight: 700;
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 991px) {
   .navbar-collapse {
     border-top: 5px solid #005fae;
   }
 }
 
 @media only screen and (min-width: 768px) {
+.container{
+ width: 100%
+}
+}
+@media (max-width: 992px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
+@media screen and (min-width: 992px) {
   body {
     padding-top: 170px;
   }
@@ -562,8 +603,6 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
     padding-top: 5px;
     padding-bottom: 5px;
   }
-}
-@media screen and (min-width: 992px) {
   li.dropdown {
     padding: 5px 0px;
     font-size: 1.08em;
