toggle background-color change when hamburger and search glyph clicked

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -446,6 +446,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   display: inline-block;
   float: right;
   padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 20px;
 }
 
 .quicktools {
