--- a/app/styles/studenthubsecondary.scss
+++ b/app/styles/studenthubsecondary.scss
@@ -1,333 +1,21 @@
+// @import "ContentTypes/MainHeaderNavigation";
+@import "ContentTypes/variables";
+@import "ContentTypes/content";
+// @import "ContentTypes/navmenu";
+@import "ContentTypes/TableStyles";
+// @import "ContentTypes/AdmissionsStyles";
+// @import "ContentTypes/PresidentMessages";
+@import "ContentTypes/HighlightBox";
+@import "ContentTypes/CallsToAction";
+// @import "ContentTypes/ExpertProfiles";
+@import "ContentTypes/hero";
+// @import "ContentTypes/newsroom";
+@import "ContentTypes/panel";
+@import "ContentTypes/footer";
+// @import "ContentTypes/SiteHeader";
+@import "ContentTypes/stylestoimport";
+@import "ContentTypes/card";
 
-
-footer {
-  margin-top: 15px;
-  padding: 10px 0;
-}
-
-footer .bg-dark {
-  background: #111111;
-}
-
-footer .copyright {
-  margin: 0;
-}
-
-footer .font-alt {
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  color: #1f4d69;
-}
-
-footer .footer-social-links {
-  text-align: right;
-}
-
-footer .footer-social-links a {
-  color: #ffffff;
-  display: inline-block;
-  padding: 0 6px;
-}
-
-.footer {
-  padding: 10px;
-  color: white;
-}
-
-a.footer {
-  color: #fff;
-}
-
-.copyright {
-  margin: 0;
-}
-
-.footer-social-links {
-  text-align: right;
-  margin: 10px 0;
-  font-size: 20px;
-}
-
-.footer-social-links a {
-  display: inline-block;
-  padding: 0 6px;
-}
-
-.bg-dark {
-  background: #111;
-}
-
-.social-links {
-  font-size: 250%;
-  letter-spacing: 10px;
-}
-
-.custombtn {
-  border-radius: 0;
-  margin-bottom: 15px;
-  width: 100%;
-  font-weight: 100 !important;
-  box-shadow: 1px 5px 5px rgba(0,0,0,0.176);
-}
-
-.turquoise-f {
-  color: red !important;
-}
-
-.turquoise {
-  background: #1ABC9C;
-}
-
-.turquoise:hover {
-  background: #17a689;
-}
-
-.greensea {
-  background: #16A085;
-  color: #fff !important;
-}
-
-.greensea:hover {
-  background: #138a72;
-  color: #fff !important;
-}
-
-.emerald {
-  background: #2ECC71;
-  color: #fff !important;
-}
-
-.emerald:hover {
-  background: #29b765;
-  color: #fff !important;
-}
-
-.nephritis {
-  background: #27AE60;
-  color: #fff !important;
-}
-
-.nephritis:hover {
-  background: #295;
-  color: #fff !important;
-}
-
-.peterriver {
-  background: #3498DB;
-  color: #fff !important;
-}
-
-.peterriver:hover {
-  background: #258cd1;
-  color: #fff !important;
-}
-
-.belizehole {
-  background: #2980B9;
-  color: #fff !important;
-}
-
-.belizehole:hover {
-  background: #2472a4;
-  color: #fff !important;
-}
-
-.amethyst {
-  background: #9B59B6;
-  color: #fff !important;
-}
-
-.amethyst:hover {
-  background: #8f4bab;
-  color: #fff !important;
-}
-
-.wisteria {
-  background: #8E44AD;
-  color: #fff !important;
-}
-
-.wisteria:hover {
-  background: #7f3d9b;
-  color: #fff !important;
-}
-
-.wetasphalt {
-  background: #34495E;
-  color: #fff !important;
-}
-
-.wetasphalt:hover {
-  background: #34495e;
-  color: #fff !important;
-}
-
-.midnightblue {
-  background: #2C3E50;
-  color: #fff !important;
-}
-
-.midnightblue:hover {
-  background: #4f6f8f;
-  color: #fff !important;
-}
-
-.sunflower {
-  background: #F1C40F;
-  color: #fff !important;
-}
-
-.sunflower:hover {
-  background: #dfb50d;
-  color: #fff !important;
-}
-
-.orange {
-  background: #F39C12;
-  color: #fff !important;
-}
-
-.orange:hover {
-  background: #e6910c;
-  color: #fff !important;
-}
-
-.carrot {
-  background: #E67E22;
-  color: #fff !important;
-}
-
-.carrot:hover {
-  background: #dc7419;
-  color: #fff !important;
-}
-
-.pumpkin {
-  background: #D35400;
-  color: #fff !important;
-}
-
-.pumpkin:hover {
-  background: #fa6400;
-  color: #fff !important;
-}
-
-.alizarin {
-  background: #E74C3C;
-  color: #fff !important;
-}
-
-.alizarin:hover {
-  background: #e02e1c;
-  color: #fff !important;
-}
-
-.pomegranate {
-  background: #C0392B;
-  color: #fff !important;
-}
-
-.pomegranate:hover {
-  background: #c0392b;
-  color: #fff !important;
-}
-
-.clouds {
-  background: #ECF0F1;
-  color: #000 !important;
-}
-
-.clouds:hover {
-  background: #67848b;
-  color: #000 !important;
-}
-
-.silver {
-  background: #BDC3C7;
-  color: #000 !important;
-}
-
-.silver:hover {
-  background: #6a757d;
-  color: #000 !important;
-}
-
-.asbestos {
-  background: #7F8C8D;
-  color: #000 !important;
-}
-
-.asbestos:hover {
-  background: #6c7879;
-  color: #000 !important;
-}
-
-.concrete {
-  background: #95A5A6;
-  color: #000 !important;
-}
-
-.concrete:hover {
-  background: #637576;
-  color: #000 !important;
-}
-
-.darkgray {
-  background: #333;
-}
-
-.lightgray {
-  background: #bcbaba;
-}
-
-.white {
-  background: #fff;
-  color: #000;
-}
-
-.black {
-  background: #000;
-  color: #fff;
-}
-
-.contentlink {
-  background: #1b557a;
-}
-
-.rowdyblue {
-  background: #00447c;
-  color: #fff !important;
-}
-
-.rowdyblue:hover {
-  background: #003663;
-  color: #fff !important;
-}
-
-.rowdyred {
-  background: #c50f3c;
-  color: #fff !important;
-}
-
-.rowdyred:hover {
-  background: #ad0d35;
-  color: #fff !important;
-}
-
-.rowdygray {
-  background: #717073;
-  color: #fff !important;
-}
-
-.rowdygray:hover {
-  background: #646366;
-  color: #fff !important;
-}
-
-.body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
 
 h1,
 h2,
@@ -349,40 +37,7 @@ blockquote {
   color: #3289be;
 }
 
-.HighlightBox {
-  background: #dc3d37;
-  color: #fff;
-  padding: 1.5em;
-  margin-bottom: 1.5em;
-  position: relative;
-}
 
-.HighlightBox-title {
-  color: #fff;
-  font-size: 1.5em;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.panel-group {
-  margin-bottom: 20px;
-  border-radius: 0;
-}
-
-.panel-title {
-  color: #fff;
-}
-
-.panel-default {
-  border: 1px solid #354f60;
-}
-
-.panel-default > .panel-heading {
-  background: #354f60;
-  color: #fff;
-  font-size: 1.5em;
-  border-color: #354f60;
-}
 
 .navbar {
   background: transparent;
@@ -397,339 +52,10 @@ blockquote {
   box-shadow: 1px 5px 5px rgba(0,0,0,0.176);
 }
 
-.turquoise-f {
-  color: red !important;
-}
-
-.turquoise {
-  background: #1ABC9C;
-}
-
-.turquoise:hover {
-  background: #17a689;
-}
-
-.greensea {
-  background: #16A085;
-  color: #fff !important;
-}
-
-.greensea:hover {
-  background: #138a72;
-  color: #fff !important;
-}
-
-.emerald {
-  background: #2ECC71;
-  color: #fff !important;
-}
-
-.emerald:hover {
-  background: #29b765;
-  color: #fff !important;
-}
-
-.nephritis {
-  background: #27AE60;
-  color: #fff !important;
-}
-
-.nephritis:hover {
-  background: #295;
-  color: #fff !important;
-}
-
-.peterriver {
-  background: #3498DB;
-  color: #fff !important;
-}
-
-.peterriver:hover {
-  background: #258cd1;
-  color: #fff !important;
-}
-
-.belizehole {
-  background: #2980B9;
-  color: #fff !important;
-}
-
-.belizehole:hover {
-  background: #2472a4;
-  color: #fff !important;
-}
-
-.amethyst {
-  background: #9B59B6;
-  color: #fff !important;
-}
-
-.amethyst:hover {
-  background: #8f4bab;
-  color: #fff !important;
-}
-
-.wisteria {
-  background: #8E44AD;
-  color: #fff !important;
-}
-
-.wisteria:hover {
-  background: #7f3d9b;
-  color: #fff !important;
-}
-
-.wetasphalt {
-  background: #34495E;
-  color: #fff !important;
-}
-
-.wetasphalt:hover {
-  background: #34495e;
-  color: #fff !important;
-}
-
-.midnightblue {
-  background: #2C3E50;
-  color: #fff !important;
-}
-
-.midnightblue:hover {
-  background: #4f6f8f;
-  color: #fff !important;
-}
-
-.sunflower {
-  background: #F1C40F;
-  color: #fff !important;
-}
-
-.sunflower:hover {
-  background: #dfb50d;
-  color: #fff !important;
-}
-
-.orange {
-  background: #F39C12;
-  color: #fff !important;
-}
-
-.orange:hover {
-  background: #e6910c;
-  color: #fff !important;
-}
-
-.carrot {
-  background: #E67E22;
-  color: #fff !important;
-}
-
-.carrot:hover {
-  background: #dc7419;
-  color: #fff !important;
-}
-
-.pumpkin {
-  background: #D35400;
-  color: #fff !important;
-}
-
-.pumpkin:hover {
-  background: #fa6400;
-  color: #fff !important;
-}
-
-.alizarin {
-  background: #E74C3C;
-  color: #fff !important;
-}
-
-.alizarin:hover {
-  background: #e02e1c;
-  color: #fff !important;
-}
-
-.pomegranate {
-  background: #C0392B;
-  color: #fff !important;
-}
-
-.pomegranate:hover {
-  background: #c0392b;
-  color: #fff !important;
-}
-
-.clouds {
-  background: #ECF0F1;
-  color: #000 !important;
-}
-
-.clouds:hover {
-  background: #67848b;
-  color: #000 !important;
-}
-
-.silver {
-  background: #BDC3C7;
-  color: #000 !important;
-}
-
-.silver:hover {
-  background: #6a757d;
-  color: #000 !important;
-}
-
-.asbestos {
-  background: #7F8C8D;
-  color: #000 !important;
-}
-
-.asbestos:hover {
-  background: #6c7879;
-  color: #000 !important;
-}
-
-.concrete {
-  background: #95A5A6;
-  color: #000 !important;
-}
-
-.concrete:hover {
-  background: #637576;
-  color: #000 !important;
-}
-
-.darkgray {
-  background: #333;
-}
-
-.lightgray {
-  background: #bcbaba;
-}
-
-.white {
-  background: #fff;
-  color: #000;
-}
-
-.black {
-  background: #000;
-  color: #fff;
-}
-
-.contentlink {
-  background: #1b557a;
-}
-
-.rowdyblue {
-  background: #00447c;
-  color: #fff !important;
-}
-
-.rowdyblue:hover {
-  background: #003663;
-  color: #fff !important;
-}
-
-.rowdyred {
-  background: #c50f3c;
-  color: #fff !important;
-}
-
-.rowdyred:hover {
-  background: #ad0d35;
-  color: #fff !important;
-}
-
-.rowdygray {
-  background: #717073;
-  color: #fff !important;
-}
-
-.rowdygray:hover {
-  background: #646366;
-  color: #fff !important;
-}
 
 .body {
   padding-top: 20px;
   padding-bottom: 20px;
-}
-
-.presidentsmessage {
-  padding: 20px;
-}
-
-.messagearea {
-  width: 100%;
-  height: 100%;
-}
-
-.presidentsheader-orange {
-  background-image: linear-gradient(#f39c12, #d78b13);
-  background-repeat: no-repeat;
-  background-color: #f39c12;
-  width: 100%;
-  padding: 10px;
-  height: 100%;
-}
-
-.presidentsheader-teal {
-  background-image: linear-gradient(#16a085, #008d71);
-  background-repeat: no-repeat;
-  background-color: #f39c12;
-  width: 100%;
-  padding: 10px;
-  height: 100%;
-}
-
-.presidentsheader-blue {
-  background-image: linear-gradient(#3498db, #0476c2);
-  background-repeat: no-repeat;
-  background-color: #f39c12;
-  width: 100%;
-  padding: 10px;
-  height: 100%;
-}
-
-.presidentstitle {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  float: left;
-  padding-top: 5px;
-  font-weight: 800;
-}
-
-.messagedate {
-  color: #fff;
-  font-size: 25px;
-  text-transform: uppercase;
-  font-weight: 800;
-  float: right;
-}
-
-.presidentsmsgimg {
-  height: 260px;
-  width: 100%;
-  background-image: url("/images/presidentmsg.png");
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-
-.whitearea {
-  background: #fff;
-  padding: 10px;
-}
-
-.presidentsquote {
-  font-style: italic;
-  font-size: 18px;
-  padding-top: 5px;
-  color: #216c87;
 }
 
 hr.style-one {
@@ -751,47 +77,18 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.row {
-  margin-right: 0;
-  margin-left: 0;
-}
 
-img {
-  max-width: 100%;
-  height: auto;
-}
 
 a {
   color: #3289be;
 }
 
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.container-fluid {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 0;
-  padding-right: 0;
+.content-inner .img-responsive {
+    padding: 0px 15px;
 }
 
 .navbar-toggle {
   border: 1px;
-}
-
-#header {
-  background-image: url("//msudenver.edu/media/studenthub/images/header_image.png");
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  padding-top: 30px;
-  padding-bottom: 20px;
 }
 
 .mainLogo {
