--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -437,7 +437,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 .fa-bars {
   background-color: #005fae;
   padding: 20px;
-  margin: -16px -30px -16px -16px;
+  margin: -17px -30px -16px -16px;
 }
 
 .glyphicon-search-mobile {
@@ -566,6 +566,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   .left-addon input {
     padding-top: 10px;
     padding-bottom: 8px;
+  }
+  .blue-header {
+    border-bottom: 5px solid #005fae;
   }
 }
 
