animate smooth dropdown open/close (cud)

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -463,9 +463,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   padding-left: 0;
 }
 
-.toolbar ul li a {
-  transition: none;
-}
+// .toolbar ul li a {
+//   transition: none;
+// }
 
 .search-desktop {
   display: none;
