fix mobile search field width/padding problem

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -562,6 +562,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   }
   #content-nav-mobile {
     display: block;
+    padding-left: 0px;
+    width: 101%;
   }
   .left-addon input {
     padding-top: 10px;
