--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -512,6 +512,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 #search-text-mobile {
   width: 100%;
   border: none;
+  opacity: 0.8;
 }
 
 .glyphicon-opened-mobile {
@@ -524,6 +525,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   top: 0.0em;
   border-radius: 5px 0 0 5px;
   cursor: unset;
+  z-index: 1;
 }
 
 @media screen and (max-width: 450px) {
