modify mobile placeholder text and search glyphicon color

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -513,10 +513,11 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   width: 100%;
   border: none;
   opacity: 0.8;
+  color: #919195;
 }
 
 .glyphicon-opened-mobile {
-  color: #717171 !important;
+  color: #007dc3 !important;
   padding-top: 10px;
   font-size: 1.2em;
   padding-right: 30px;
