fixes link color on highlightBox

--- a/app/styles/ContentTypes/_HighlightBox.scss
+++ b/app/styles/ContentTypes/_HighlightBox.scss
@@ -16,7 +16,7 @@
   text-align: center
 }
 .HighlightBox .HighlightBox-content a {
-  color: #fff;
+  color: #fff !important;
   font-size: 1em
 }
 
