updates variables with new colors

--- a/app/styles/ContentTypes/_variables.scss
+++ b/app/styles/ContentTypes/_variables.scss
@@ -85,6 +85,16 @@
   background: #95A5A6;
   color: #000!important
 }
+
+.blue {
+  background: #007DC3;
+}
+.lightblue {
+  background: #4CB4F2;
+}
+.gray{
+    background: #A7A9AC;
+}
 .darkgray {
     background: #919195;
 }
