--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -191,8 +191,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
 #content-nav #nav-search-close {
   position: relative;
-  top: -46px;
-  left: 23.4em;
+  top: -74px;
+  left: 26.8em;
   color: #007dc3;
   cursor: pointer;
   font-size: 1.3em;
@@ -428,9 +428,6 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 }
 
 .gobutton #searchGoLink.disableGoButton {
-  // color: #cbcbcb !important;
-  // background-color: #efefef !important;
-  // cursor: inherit;
   visibility: hidden;
 }
 
@@ -732,6 +729,16 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
     width: 65em;
   }
 
+  #content-nav #nav-search-close {
+    top: -78px;
+    left: 26.1em;
+  }
+
+  #content-nav #search-input .button {
+      top: -3.5em;
+      left: 33em;
+  }
+
   // .apply-button {
   //   width: 14%;
   //   margin-bottom: 20px;
@@ -753,6 +760,15 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   #content-nav #search-input input[type=text] {
     width: 89em;
   }
+  #content-nav #nav-search-close {
+      top: -77px;
+      left: 26.2em;
+  }
+  #content-nav #search-input .button {
+      top: -3.3em;
+      left: 34em;
+  }
+
 }
 
 @media only screen and (min-width:1358px) {
@@ -767,6 +783,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
   #content-nav #nav-search-close {
     font-size: 20px;
+    top: -74px;
+    left: 26.8em;
   }
 
   .glyphicon-search {
@@ -777,10 +795,10 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   }
 
   #content-nav #search-input .button {
-    top: -50px;
+    top: -39px;
     height: 30px;
     width: 130px;
-    left: 34em;
+    left: 32em;
   }
 
   .button {
