activate mobile search functionality

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -506,7 +506,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   font-size: 1.3em
 }
 
-#search-text-mobile {
+.search-text-mobile {
   width: 100%;
   border: none;
   opacity: 0.8;
