adjust vertical centering of menu row, change search button text color on hover

--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -237,9 +237,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 }
 
 #content-nav #search-input .button:hover {
-  color: #808080;
+  color: #d11242;
   ::-webkit-input-placeholder {
-    color: #808080;
+    color: #d11242;
   }
 
   :-moz-placeholder {
@@ -677,7 +677,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
     border-right: 2px solid #4cb4f2;
     font-size: 0.74em;
     margin-top: 10px;
-    margin-bottom:10px;
+    margin-bottom:7px;
     padding: 5px 0px;
     border-bottom: none;
   }
