--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -16,8 +16,14 @@ body {
   color: #fff;
   background-color: gray;
   line-height: 50px;
-  font-weight: 800;
-  font-size: 1.4em;
+  font-weight: 600;
+  font-size: 1.2em;
+  text-decoration: none;
+}
+
+.navbar-lower a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .toolbar {
@@ -84,7 +90,7 @@ body {
   font-size: 0.8em;
   padding-top: 0px;
   padding-bottom: 0px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 .pushdown-menu {
@@ -93,10 +99,13 @@ body {
   font-size: 0.8em;
   padding-top: 0px;
   padding-bottom: 0px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   text-decoration: none;
   text-align: left;
   list-style-type: inherit;
+  max-width: 17em;
+  padding-left: 1.5em;
+  text-indent:-1.5em;
 }
 
 li.dropdown {
@@ -108,7 +117,7 @@ li.dropdown {
   cursor: pointer;
   border-bottom: 2px solid #4cb4f2;
   font-size: 1.2em;
-  text-transform: uppercase;
+  text-transform: capitalize;
   padding: 5px 0px 5px 0px;
 }
 
@@ -174,7 +183,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   font-family: 'Open Sans';
   font-weight: normal;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 #content-nav #wrapper ul li:hover {
@@ -217,8 +226,8 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
 #content-nav #nav-search-close {
   position: relative;
-  top: -74px;
-  left: 26.8em;
+  top: -78px;
+  left: 50em;
   color: #007dc3;
   cursor: pointer;
   font-size: 1.3em;
@@ -250,7 +259,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   display: inline-block;
   padding-left: 3px;
   top: -4.2em;
-  left: 36em;
+  left: 66em;
   /*was 808px */
   position: relative;
   height: 2.8em;
@@ -554,7 +563,7 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   padding-top: 10px;
   font-size: 1.2em;
   padding-right: 30px;
-  padding-left: 20px;
+  padding-left: 50px;
   padding-bottom: 12px;
   top: 0.0em;
   border-radius: 5px 0 0 5px;
@@ -563,8 +572,25 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 }
 
 .container {
-    position: sticky;
+    position: relative;
   }
+
+.header-menu {
+  line-height: 50px;
+  font-weight: 800;
+  font-size: 1.4em;
+  color: #337ab7;
+  text-decoration: none;
+}
+
+
+.menu-last {
+  margin-right: 0em;
+}
+
+.nav > li > a {
+  padding-left: 0px;
+}
 
 @media screen and (max-width: 450px) {
   .navbar-toggle{
@@ -786,14 +812,21 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
   #content-nav #nav-search-close {
     top: -78px;
-    left: 26.1em;
+    left: 49em;
   }
 
   #content-nav #search-input .button {
       top: -3.5em;
-      left: 33em;
+      left: 66em;
   }
 
+  .mobile-header {
+    margin-right: 1.7em;
+  }
+
+  .blue-header {
+    height: 9em;
+  }
   // .apply-button {
   //   width: 14%;
   //   margin-bottom: 20px;
@@ -809,7 +842,6 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   font-size: 1.33em;
   }
   .glyphicon-search {
-  padding-top: 22px;
   font-size: 1.2em;
   }
   #content-nav #search-input input[type=text] {
@@ -817,13 +849,16 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   }
   #content-nav #nav-search-close {
       top: -77px;
-      left: 26.2em;
+      left: 60.2em;
   }
   #content-nav #search-input .button {
       top: -3.3em;
-      left: 34em;
+      left: 82em;
   }
 
+  .mobile-header {
+    margin-right: 5.2em;
+  }
 }
 
 @media only screen and (min-width:1358px) {
@@ -838,22 +873,22 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
   #content-nav #nav-search-close {
     font-size: 20px;
-    top: -74px;
-    left:52.0em;
+    top: -4em;
+    left: 54.5em;
   }
 
   .glyphicon-search {
-    font-size: 1.4em;
-    top: 5px;
+    // font-size: 1.4em;
+    // top: 5px;
     margin-right: 12px;
-    padding-top: 0.8em;
+    padding-top: 0.9em;
   }
 
   #content-nav #search-input .button {
-    top: -39px;
+    top: -3.2em;
     height: 30px;
     width: 130px;
-    left: 65em;
+    left: 68em;
   }
 
   .button {
@@ -863,4 +898,9 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
   #content-nav #search-input input[type=text] {
     width: 80.5em;
   }
+
+  .mobile-header {
+    margin-right: 5.2em;
+  }
+
 }
