--- a/app/styles/home2016.scss
+++ b/app/styles/home2016.scss
@@ -7,240 +7,16 @@ Wednesday 06, April, 2016
 !!! */
 @import "ContentTypes/variables.scss";
 @import "ContentTypes/MainHeaderNavigation.scss";
-@import "ContentTypes/carousel.scss";
+// @import "ContentTypes/carousel.scss";
 @import "ContentTypes/footer.scss";
-@import "ContentTypes/callstoaction.scss";
+// @import "ContentTypes/callstoaction.scss";
 
 
-body {
-    background: #E9EDF1;
-    background-attachment: fixed;
-    font-family: Open Sans, helvetica, arial, sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: #333;
-    -webkit-font-smoothing: subpixel-antialiased!important;
-    -ms-backface-visibility: hidden;
-}
-.clickable {
-    cursor: pointer;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: Open Sans, helvetica, arial, sans-serif;
-}
 h1.hidden {
     display: none;
 }
-h2 {
-    font-weight: 200;
-    text-align: right;
-    text-transform: uppercase;
-    color: #00529c;
-    font-size: 23pt;
-    width: 100%;
-    margin: 0 0 5px;
-    line-height: 1.3;
-    border-style: none;
-    border-bottom: 1px solid #949fa8;
-}
-h3 {
-    color: #4C4C4D;
-    font-size: 1.8em;
-}
-h4 {
-    color: #3498db;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.3;
-}
-h5 {
-    color: #2c3e50;
-    font-size: 16px;
-    font-weight: 500;
-}
-h6 {
-    color: #e74c3c;
-    font-size: 13px;
-    font-weight: 500;
-}
 
-// #layout,
-// #menu,
-// .menu-link {
-//     -webkit-transition: all 0.2s ease-out;
-//     -moz-transition: all 0.2s ease-out;
-//     -ms-transition: all 0.2s ease-out;
-//     -o-transition: all 0.2s ease-out;
-//     transition: all 0.2s ease-out;
-// }
-// #layout {
-//     z-index: 9998;
-//     padding-left: 200px;
-//     left: 0;
-//     top: 100px;
-// }
-
-
-.carousel-inner>.item>a>img, .carousel-inner>.item>img {
-    line-height: 1;
-    margin: auto;
-    width: 100%;
-}
-// .ie8 .img-responsive {
-//     display: block;
-//     height: auto;
-//     max-width: 100%;
-//     vertical-align: middle;
-//     border: 0;
-//     -ms-interpolation-mode: bicubic;
-// }
-// .ie8 .navbar-inverse .navbar-brand {
-//     color: inherit;
-// }
-// .ie8 img {
-//     display: block;
-//     height: auto!important;
-//     max-width: 100%;
-//     vertical-align: middle;
-//     border: 0;
-//     -ms-interpolation-mode: bicubic;
-// }
-
-// .accordion-group {
-//     padding: 1em 1em 0.5em;
-//     border: 1px solid #e8e8e8;
-// }
-// .gsc-search-button.gsc-search-button-v2 {
-//     width: inherit;
-//     height: inherit;
-// }
-
-.promo_date {
-    text-align: right;
-    font-size: small;
-}
-.promo_date+h3 {
-    width: 80%;
-}
-
-.readmore {
-    text-align: right;
-    margin-top: 10px;
-}
-.image_caption {
-    font-size: 12px;
-    line-height: 19px;
-    color: #73787e;
-}
-.well {
-    background: #fff;
-    border: 1px solid #e3e3e3;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-    margin-bottom: 20px;
-    padding: 1.2575em;
-}
 .container-fluid {
     padding-right: 0;
     padding-left: 0;
-}
-.img-thumbnail,
-.thumbnail {
-    padding: 0.5em;
-    margin: 1em;
-}
-.btn-primary a {
-    color: #fff;
-}
-.btn-primary a a:hover {
-    text-decoration: none;
-}
-.nav-social > a > i.fa {
-    color: #fff;
-    font-size: 18px;
-    padding: 15px 10px;
-}
-
-.navbar-inner {
-    text-align: center;
-}
-
-.news-events {
-    background: white;
-    padding: 25px;
-    margin-bottom: 15px;
-}
-
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:focus,
-.nav-tabs > li.active > a:hover {
-    color: #003663;
-    cursor: default;
-    background-color: #fff;
-    border: 0;
-    border-bottom: 3px solid #003663;
-}
-.nav-tabs > li > a {
-    border: 1px solid transparent;
-    border-radius: 0;
-    font-size: 2em;
-    color: gray;
-    text-transform: uppercase;
-    font-family: 'Fjalla One', sans-serif;
-    margin-top: 10px;
-}
-.tab-pane {
-    padding-top: 15px;
-}
-.tab-pane > h4 {
-    text-align: right;
-    text-transform: uppercase;
-}
-.row.news-home-item {
-    margin-bottom: 6px;
-    margin-top: 6px;
-}
-p.news-home-month {
-    color: gray;
-    text-transform: uppercase;
-    margin-bottom: 0;
-}
-p.news-home-day {
-    color: gray;
-    font-size: 27px;
-    font-weight: bold;
-}
-p.news-home-headline {
-    color: #337ab7;
-    font-size: 20px;
-    padding-top: 2px;
-    margin-bottom: 0;
-}
-p.news-home-intro {
-    color: gray;
-}
-p.event-home-headline {
-    color: #337ab7;
-    font-size: 20px;
-    padding-top: 2px;
-    margin-bottom: 0;
-}
-p.event-home-date {
-    color: gray;
-    font-size: 1.2em;
-    font-weight: bold;
-}
-p.event-home-intro {
-    color: gray;
-}
-p.event-home-date {
-    color: gray;
-    font-size: 1.2em;
-    font-weight: bold;
 }
