--- a/app/styles/ContentTypes/_MainHeaderNavigation.scss
+++ b/app/styles/ContentTypes/_MainHeaderNavigation.scss
@@ -94,7 +94,7 @@ body {
 }
 
 .pushdown-menu {
-  padding-left: 10px;
+  // padding-left: 10px;
   padding-right: 10px;
   font-size: 0.8em;
   padding-top: 0px;
@@ -103,9 +103,10 @@ body {
   text-decoration: none;
   text-align: left;
   list-style-type: inherit;
-  max-width: 17em;
+  max-width: 15em;
   padding-left: 0.5em;
   text-indent:-0.6em;
+  display: none;
 }
 
 li.dropdown {
@@ -137,13 +138,13 @@ li.dropdown.last {
   // height: 40px;
   // margin-bottom: 10px;
   background-color: #fff;
-  max-height: 55px;
+  max-height: 600px;
   transition: max-height 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
 }
 
-#content-nav:hover {
-  max-height: 600px;
-}
+// #content-nav:hover {
+//   max-height: 600px;
+// }
 
 #content-nav #wrapper li {
   padding-left: 0;
@@ -591,6 +592,10 @@ i.fa.fa-chevron-down.pull-right.chevron-pulldown {
 
 .nav > li > a {
   padding-left: 0px;
+}
+
+.mobile-header {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 450px) {
