--- a/development/terminalfour/src/sass/framework.scss
+++ b/development/terminalfour/src/sass/framework.scss
@@ -1,5 +1,5 @@
 //Uncomment the line below if you are not using a Framework
-//@import "normalize";
+@import "normalize";
 
 // Import the framework you require by uncommenting the correct line below
 
