moves all less files from app to development

--- a/development/terminalfour/src/sass/home.scss
+++ b/development/terminalfour/src/sass/home.scss
@@ -5,10 +5,10 @@ CSS Baked on :
 Wednesday 06, April, 2016
 
 !!! */
-@import "ContentTypes/variables.scss";
-@import "ContentTypes/MainHeaderNavigation.scss";
+@import "ContentTypes/variables";
+@import "ContentTypes/MainHeaderNavigation";
 // @import "ContentTypes/carousel.scss";
-@import "ContentTypes/footer.scss";
+@import "ContentTypes/footer";
 // @import "ContentTypes/callstoaction.scss";
 
 
