--- a/development/terminalfour/src/html/includes/footer.html
+++ b/development/terminalfour/src/html/includes/footer.html
@@ -63,8 +63,7 @@
             <a href="https://msudenver.edu"> <img src="http://sitemanager.msudenver.edu/media/assets/homepagespring2016/msudenver-informal_logo.png"></a><br><br>
           <a href="https://msudenver.edu"><small>&copy; MSU Denver</small></a>
 
-            <a href="/privacy"><small>Privacy Statement</small></a> <br>
-            <a href="http://www.collegeportraits.org/CO/MSU_Denver" target="_blank"><small>College Portrait</small></a>
+            <a href="/privacy"><small>Privacy Statement</small></a>
             <br>
           </div>
         </div>
