--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -1,5 +1,144 @@
 <header>
-    <!-- Global page header -->
-    <h1 class="feature-heading">Page header</h1>
-    <p class="feature-subtext"> -* header to be designed + developed by MSU Denver *-</p>
+  <div class="container-fluid">
+  <!-- QUICKLINKS TOOLBAR -->
+    <div class="navbar navbar-fixed-top toolbar">
+      <button type="button " class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle quick links navigation</span>
+        <span class="fa fa-bars"></span>
+      </button>
+      <div class="blue-header">
+        <div class="container">
+          <div class="col-xs-8">
+            <img class="msudenver_logo" src="http://sitemanager.msudenver.edu/media/assets/img/MSUdenver-logo.png" alt="MSU Denver Logo">
+          </div>
+          <a href="http://msudenver.edu/admissions"><div class="col-xs-1 apply-button">APPLY</div></a>
+          <a href="http://msudenver.edu/alumni/give/"><div class="col-xs-1 apply-button give-visit-buttons">GIVE</div></a>
+          <a href="https://msudenver.edu/visit/"><div class="col-xs-1 apply-button give-visit-buttons">VISIT</div></a>
+          <span class="glyphicon glyphicon-search glyphicon-search-mobile"></span>
+
+        </div>
+      </div>
+
+  </div>
+  </div>
+
+  <!-- ******START PUSHDOWN MENU AND SEARCH BAR ****** -->
+  <div class="navbar-collapse collapse" id="content-nav">
+    <div class="container">
+      <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
+        <li id="nav-faculty">
+          <a class="mobile-header">About</a>
+          <ul class="pushdown-menu">
+            <li><a href="#">About</a></li>
+            <li><a href="#">Strategic Plan 2020</a></li>
+            <li><a href="#">Office of the President</a></li>
+            <li><a href="#">Board of Trustees</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">Our Past</a></li>
+            <li><a href="#">Questions / Comments</a></li>
+            <li><a href="#">Graduation / Commencement</a></li>
+           </ul>
+         </li>
+         <li id="nav-admissions">
+           <a class="mobile-header">Prospective Students</a>
+           <ul class="pushdown-menu">
+             <li><a href="#">Prospective Students</a></li>
+             <li><a href="#">First-Time Undergraduate</a></li>
+             <li><a href="#">Transfer Students</a></li>
+             <li><a href="#">Adult Students</a></li>
+             <li><a href="#">Master&rsquo;s Programs</a></li>
+             <li><a href="#">Military Veterans</a></li>
+             <li><a href="#">International Students</a></li>
+             <li><a href="#">Out of State</a></li>
+             <li><a href="#">Re-Admit</a></li>
+             <li><a href="#">Non-Degree</a></li>
+             <li><a href="#">Concurrently Enrolled</a></li>
+             <li><a href="#">Cost</a></li>
+           </ul>
+         </li>
+         <li id="nav-academics">
+           <a class="mobile-header">Academics</a>
+           <ul class="pushdown-menu">
+             <li><a href="/programs/">Academic Programs</a></li>
+             <li><a href="/las/">College of Letters, Arts and Sciences</a></li>
+             <li><a href="/cps/">College of Professional Studies</a></li>
+             <li><a href="/business/">College of Business</a></li>
+             <li><a href="/education/">School of Education</a></li>
+             <li><a href="/fys/">First Year Success</a></li>
+             <li><a href="#">Academic Support</a></li>
+             <li><a href="#">Extended Campus</a></li>
+             <li><a href="#">Online Courses</a></li>
+             <li><a href="#">Graduation/ Commencement</a></li>
+           </ul>
+         </li>
+         <li id="nav-campus">
+           <a class="mobile-header">Campus Life</a>
+           <ul class="pushdown-menu">
+             <li><a href="/campuslife/">Campus Life</a></li>
+             <li><a href="/studentactivities/">Student Activities</a></li>
+             <li><a href="/campuslife/wellnessrecreation/">Health &amp; Counseling</a></li>
+             <li><a href="/campuslife/involvementrecreation/">Involvement &amp; Recreation</a></li>
+             <li><a href="/studentengagementandwellness/">Student Engagement &#38; Wellness</a></li>
+             <li><a href="/campuslife/studentpublications/">Student Media</a></li>
+             <li><a href="">Student Organizations</a></li>
+           </ul>
+         </li>
+         <li id="nav-alumni">
+           <a class="mobile-header menu-last">Alumni</a>
+           <ul class="pushdown-menu">
+             <li><a href="/alumni/">Alumni</a></li>
+             <li><a href="">Donors</a></li>
+             <li><a href="/alumni/careerservices/">Career Services</a></li>
+             <li><a href="/alumni/alumnibenefits/">Alumni Benefits</a></li>
+             <li><a href="">MSU Denver Magazine</a></li>
+             <li><a href="/alumni/continuingeducation/">Continuing Education</a></li>
+             <li><a href="/alumni/studentalumniassociation/">Student Alumni Association</a></li>
+             <li><a href="">Alumni Events</a></li>
+           </ul>
+         </li>
+         <li id="nav-search"><div><span class="glyphicon glyphicon-search search-desktop"></span></div></li>
+  <!-- Hidden Search Bar-->
+        <form action="https://www.msudenver.edu/search">
+          <div id="search-input" class="inner-addon left-addon search-input-desktop" role="search" action="https://www.msudenver.edu/search">
+            <span class="glyphicon glyphicon-search glyphicon-opened"></span>
+            <input  id="q" name="q" type="text" class="home-input" placeholder="SEARCH MSU DENVER" tabindex="2"; style="margin-left: -3px; outline: none;";>
+        <!-- AUTO SUGGEST -->
+        <!-- Code auto suggest server by DEV, PROD, etc. -->
+            <div id="autoSuggestResults"></div>
+                    <!-- END AUTO SUGGEST -->
+            <div class="gobutton">
+              <a id="searchGoLink" class="disableGoButton">
+                <button type="submit" class="button" id="qButton">SEARCH</button>
+              </a>
+            </div>
+            <span id="nav-search-close" class="glyphicon glyphicon-remove"></span>
+          </div> <!-- search-input -->
+        </form>
+      </ul>
+    </div>
+  </div>
+    <!--/.nav-collapse -->
+    <!-- mobile search-input -->
+    <form action="https://www.msudenver.edu/search">
+      <div id="" class="" role="search" action="https://www.msudenver.edu/search">
+              <div id="content-nav-mobile">
+                <div id="search-input" class="inner-addon left-addon search-input-mobile">
+                    <span class="glyphicon glyphicon-search glyphicon-opened-mobile"></span>
+                          <input  id="q"
+                            name="q"
+                            type="text"
+                            class="home-input search-text-mobile"
+                            placeholder="SEARCH MSU DENVER"
+                            tabindex="2";
+                            style="margin-left: -3px; outline: none;";
+                           >
+                    <!-- AUTO SUGGEST -->
+                    <!-- Code auto suggest server by DEV, PROD, etc. -->
+                    <div id="autoSuggestResults"></div>
+
+                    <!-- END AUTO SUGGEST -->
+                </div>
+              </div>
+      </div>
+    </form>
 </header>
