--- a/development/terminalfour/src/html/includes/Home-PageHero.html
+++ b/development/terminalfour/src/html/includes/Home-PageHero.html
@@ -1,16 +1,13 @@
-<!-- HERO STARTS HERE -->
 <section id="PageHero">
   <div class="container-fluid">
     <img class="img-responsive" src="http://placehold.it/4000x2000">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h2>caption goes here</h2>
-          <h3>Caption sub head</h3>
+          <h2 class="feature-heading">caption goes here</h2>
+          <p class="feature-subtext"><a href="javascript:void(0)" class="btn">Read how we're powering careers and a 21st century economy</a></p>
         </div>
       </div>
     </div>
-
   </div>
 </section>
-<!-- HERO ENDS HERE-->
