--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
@@ -21,6 +21,7 @@ $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
+$msu-dark-blue:          #003a6e; //Dark blue
 
 //== Scaffolding
 //
@@ -43,8 +44,8 @@ $link-hover-decoration: underline !default;
 //
 //## Font, line-height, and color for body text, headings, and more.
 
-$font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
+$font-family-sans-serif:  "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+$font-family-serif:       "Karla", "Georgia", "Times New Roman", Times, serif !default;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
