--- a/development/terminalfour/src/sass/framework.scss
+++ b/development/terminalfour/src/sass/framework.scss
@@ -1,14 +1,6 @@
 //Uncomment the line below if you are not using a Framework
-@import "normalize";
+//@import "normalize";
 
-// Import the framework you require by uncommenting the correct line below
-
-//@import "../../lib/foundation/scss/foundation.scss";
-<<<<<<< HEAD
-//@import "../../lib/bootstrap-sass/scss/bootstrap.scss";
-//@import "/style-assets/lib/lemonade/lemonade.css";
-=======
 //Bootstrap sass v 3.3.7 
 @import "../../../lib/bootstrap-sass/assets/stylesheets/bootstrap"; 
-//@import "/style-assets/lib/lemonade/lemonade.css"; 
->>>>>>> 9bdf5ba69ada496fbac46dc39429f48df262d12c
+
