More on the homepage

--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss
@@ -20,14 +20,14 @@
 // Body reset
 
 html {
-  font-size: 14px;
+  font-size: $font-size-small;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body {
   font-family: $font-family-base;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
+  font-size: $font-size-small;
+  line-height: $line-height-small;
   color: $text-color;
   background-color: $body-bg;
 }
@@ -159,3 +159,12 @@ hr {
 [role="button"] {
   cursor: pointer;
 }
+
+@media screen and (min-width: 768px) {
+    html { font-size: $font-size-base; }
+    body {
+      font-size: $font-size-base;
+      line-height: $line-height-small;
+    }
+} 
+
