--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -16,6 +16,8 @@
 header { background-color: #505050; text-align: center; color: #fff; }
 
 /**  Homepage Feature Components michael.mason@terminalfour.com **/
+@import "msu-partials/msu-utils";
 @import "msu-partials/homepage-base";
 @import "msu-partials/homepage-feature-caption";
+
 
