--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_msu-variables.scss
@@ -14,8 +14,10 @@ $gray-dark:              lighten($gray-base, 20%) !default;   // #333
 $gray:                   lighten($gray-base, 33.5%) !default; // #555
 $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
+$white:                  #fff !default;
 
 $brand-primary:         #003a6e !default; // ##003a6e
+$msu-blue:              #003a6e !default;  //Dark blue
 $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
@@ -50,9 +52,12 @@ $font-family-serif:       "Karla", "Georgia", "Times New Roman", Times, serif !d
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-serif !default;
 
-$font-size-base:          14px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-base:          16px !default;
+$base-unit:               16 !default;
+$font-size-large:         ceil(($font-size-base * 1.125)) !default; // ~18px
+$font-size-small:         ceil(($font-size-base * 0.875)) !default; // ~14px
+$large-unit:              ceil((16 * 1.125)) !default;
+$small-unit:              ceil((16 * 0.875)) !default;
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
 $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
@@ -66,10 +71,12 @@ $line-height-base:        1.428571429 !default; // 20/14
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
 
+
 //** By default, this inherits from the `<body>`.
 $headings-font-family:    inherit !default;
 //$headings-font-weight:    500 !default;
 $headings-font-weight:    700 !default;
+$headings-font-weight-black:    900 !default;
 $headings-line-height:    1.1 !default;
 $headings-color:          inherit !default;
 
