--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -6,6 +6,7 @@
     background-color: $gray-base;
     @include make-row();
     h1, h2, p { color: #fff; }
+    h1 { line-height: torem(72, $small-unit); }
     img {
         @include img-responsive;
     }
@@ -15,17 +16,35 @@
     @include make-sm-column(12);
 }
 .feature-heading { 
-    margin: 0 0 35px;
-    font-size: 3.438rem;
-    line-height: 4.500rem;
+    margin: 0 0 torem(35, $small-unit);
+    font-size: torem(55, $small-unit); //55px @ 12px
 }
 .feature-heading-large {
     font-family: $font-family-sans-serif;
-    font-size: 60px;
-    line-height: 72px;
+    font-size: torem(60, $small-unit);
     text-transform: uppercase;
 }
 .feature-subheading {
-    font-size: 40px;
-    line-height: 60px;
+    font-size: torem(40, $small-unit);
+    line-height: torem(60, $small-unit);
+}
+.homepage-btn {
+    font-family: $font-family-sans-serif;
+    font-weight: $headings-font-weight;
+    font-size: torem(33, $small-unit); //33px @ 14px
+    color: $msu-blue;
+    background-color: $white;
+    text-transform: uppercase;
+    border-radius: 11px;
+}
+
+@media (min-width: 767px) {
+    .homepage-feature {
+        h1 { line-height: torem(48, $base-unit);  }
+    }
+    .feature-heading {
+        font-size: torem(44, $base-unit);
+        margin-bottom: torem(30, $base-unit);
+        
+    }
 }
