--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -19,5 +19,7 @@ header { background-color: #505050; text-align: center; color: #fff; }
 @import "msu-partials/msu-utils";
 @import "msu-partials/homepage-base";
 @import "msu-partials/homepage-feature-caption";
+@import "msu-partials/homepage-ryor";
+
 
 
