--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7464,7 +7464,7 @@ header {
   text-transform: uppercase;
 }
 
-.feature-subheading {
+.feature-heading-sub {
   font-size: 2.85714rem;
   line-height: 4.28571rem;
 }
@@ -7529,6 +7529,42 @@ header {
   .homepage-feature-caption-link {
     font-size: 1.5625rem;
     line-height: 1.875rem;
+  }
+}
+#homepage-ryor {
+  position: relative;
+}
+
+.ryor-student-image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.ryor-student {
+  position: relative;
+  float: left;
+  width: 100%;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  z-index: 2;
+  padding-top: 3.57143rem;
+}
+
+.ryor-image {
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+  z-index: 2;
+}
+@media (min-width: 768px) {
+  .ryor-image {
+    float: left;
+    width: 100%;
   }
 }
 
