--- a/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss
+++ b/development/lib/bootstrap-sass/assets/stylesheets/bootstrap/_scaffolding.scss
@@ -162,7 +162,7 @@ hr {
 }
 
 @media screen and (min-width: 768px) {
-    html { font-size: $font-size-base; //16px }
+    html { font-size: $font-size-base; }//16px
     body {
       font-size: $font-size-base; //16px 
       line-height: $line-height-small;
