--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -6,7 +6,7 @@
     background-color: $gray-base;
     @include make-row();
     h1, h2, p { color: #fff; }
-    h1 { line-height: torem(72, $small-unit); }
+    h1 { line-height: 48px; }
     img {
         @include img-responsive;
     }
@@ -16,38 +16,71 @@
     @include make-sm-column(12);
 }
 .feature-heading { 
+    margin: 0 0 toem(35, $small-unit);
     margin: 0 0 torem(35, $small-unit);
-    font-size: torem(55, $small-unit); //55px @ 12px
+    font-size: toem(40, $small-unit); //55px @ 12px
+    font-size: torem(40, $small-unit); //55px @ 12px
 }
 .feature-heading-large {
     font-family: $font-family-sans-serif;
-    font-size: torem(60, $small-unit);
+    font-size: toem(40, $small-unit);
+    font-size: torem(40, $small-unit);
+    line-height: 60;
     text-transform: uppercase;
 }
 .feature-heading-sub {
-    font-size: torem(40, $small-unit);
-    line-height: torem(60, $small-unit);
-}
-.feature-text {
+    font-size: toem(48, $small-unit);
+    font-size: torem(48, $small-unit);
     
+    line-height: 60px;
+}
+.feature-text { 
+    font-size: toem(36, $small-unit); //55px @ 12px
+    font-size: torem(36, $small-unit); //55px @ 12px
+    font-weight: 400;
+    margin: 0 0 toem(35, $small-unit);
+    margin: 0 0 torem(35, $small-unit);
+
 }
 .homepage-btn {
     font-family: $font-family-sans-serif;
-    font-weight: $headings-font-weight;
-    font-size: torem(33, $small-unit); //33px @ 14px
+    font-weight: 900;
+    font-size: toem(25, $small-unit); //33px @ 14px
+    font-size: torem(25, $small-unit); //33px @ 14px
+    padding: toem(10) toem(30);
+    padding: torem(10) torem(30);
     color: $msu-blue;
     background-color: $white;
     text-transform: uppercase;
     border-radius: 11px;
+    float: right;
 }
 
-@media (min-width: 767px) {
+@media (min-width: $screen-sm-min) {
     .homepage-feature {
-        h1 { line-height: torem(48, $base-unit);  }
+        h1 { line-height: 48px;  }
     }
     .feature-heading {
+        font-size: toem(44, $base-unit);
         font-size: torem(44, $base-unit);
+        margin-bottom: toem(30, $base-unit);
         margin-bottom: torem(30, $base-unit);
-        
+    }
+    .homepage-btn {
+        font-family: $font-family-serif;
+        font-weight: 700;
+        font-size: toem(25, $base-unit); //33px @ 14px
+        font-size: torem(25, $base-unit); //33px @ 14px
+        padding-left: 0;
+        padding-right: 0;
+        background-color: trasparent;
+        color: $white;
+        background-color: transparent;
+
+        float: right;
+    }
+    .homepage-btn:active, .homepage-btn:focus, .homepage-btn:hover {
+        color: $white;
+        text-decoration: underline;
     }
 }
