--- a/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-ryor.scss
@@ -1,21 +1,80 @@
 //Run your own road feature
 #homepage-ryor {
-    
+    margin-top: toem(10);
+    margin-top: torem(10);
+    margin-top: toem(10);
+    margin-top: torem(10);
+    position: relative;
+    .feature-heading { 
+        margin: 0 0 toem(10, $small-unit);
+        margin: 0 0 torem(10, $small-unit);
+    }
+    .feature-heading-sub {
+        font-size: toem(36, 14);
+        font-size: toem(36, 14);
+        font-weight: 400;
+        margin: 0 0 toem(10, $small-unit);
+        margin: 0 0 torem(10, $small-unit);
+    }
+    .feature-text { 
+        font-size: toem(30, $small-unit); //55px @ 12px
+        font-size: torem(30, $small-unit); //55px @ 12px
+        font-weight: 700;
+        margin: 0 0 toem(35, $small-unit);
+        margin: 0 0 torem(35, $small-unit);
+
+    }
+    .feature-heading, .feature-heading-sub, .feature-text {
+        text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.77);
+    }
+}
+
+.ryor-student-image-wrap {
     position: relative;
 }
 .ryor-student-image {
     width: 100%;
-    position: absolute;
+    position: relative;
     top: 0;
-    left: 0;
+    left: 0; 
+    z-index: 0;
+}
+/* IMage gradient overlay */
+.ryor-student-image-wrap::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
     z-index: 1;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+80,1+100 */
+    background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 80%, rgba(0,0,0,1) 100%); 
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 80%,rgba(0,0,0,1) 100%); 
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0) 80%,rgba(0,0,0,1) 100%); 
+    
 }
 .ryor-student {
+    position: relative;
     @include make-xs-column(12);
     z-index: 2;
-    padding-top: torem(50, 14);
+//    padding-top: toem(50, 14);
+//    padding-top: torem(50, 14);
+    top: calc(-200px);
 }
 .ryor-image {
     @include make-sm-column(12);   
     z-index: 2;
+}
+@media (min-width: $screen-sm-min) {
+    #homepage-ryor {
+        .feature-heading-sub {
+            font-size: toem(36, $small-unit);
+            font-size: toem(36, $small-unit);
+            font-weight: 400;
+            margin: 0 0 toem(10, $base-unit);
+            margin: 0 0 torem(10, $base-unit);
+        }
+        .homepage-btn {
+            float: left;
+        }
+    }
 }
