--- a/development/terminalfour/src/sass/style.scss
+++ b/development/terminalfour/src/sass/style.scss
@@ -13,8 +13,14 @@
     =================================================
 **/
 
-header { background-color: #505050; text-align: center; color: #fff; }
-
+/** SVG fallback for IE 8 **/
+header { 
+    background-color: #505050; 
+    text-align: center; 
+    color: #fff; 
+}
+#denver-city-svg { background: blue; color: #fff; }
+#denver-city-svg svg { color: #fff;}
 /**  Homepage Feature Components michael.mason@terminalfour.com **/
 @import "msu-partials/msu-utils";
 @import "msu-partials/homepage-base";
