--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7394,9 +7394,19 @@ button.close {
         MSU Denver 2016 custom style declarations 
     =================================================
 **/
+/** SVG fallback for IE 8 **/
 header {
   background-color: #505050;
   text-align: center;
+  color: #fff;
+}
+
+#denver-city-svg {
+  background: blue;
+  color: #fff;
+}
+
+#denver-city-svg svg {
   color: #fff;
 }
 
@@ -7432,7 +7442,7 @@ header {
   color: #fff;
 }
 .homepage-feature h1 {
-  line-height: 5.14286rem;
+  line-height: 48px;
 }
 .homepage-feature img {
   display: block;
@@ -7454,39 +7464,76 @@ header {
 }
 
 .feature-heading {
+  margin: 0 0 2.5em;
   margin: 0 0 2.5rem;
-  font-size: 3.92857rem;
+  font-size: 2.85714em;
+  font-size: 2.85714rem;
 }
 
 .feature-heading-large {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 4.28571rem;
+  font-size: 2.85714em;
+  font-size: 2.85714rem;
+  line-height: 60;
   text-transform: uppercase;
 }
 
 .feature-heading-sub {
-  font-size: 2.85714rem;
-  line-height: 4.28571rem;
+  font-size: 3.42857em;
+  font-size: 3.42857rem;
+  line-height: 60px;
+}
+
+.feature-text {
+  font-size: 2.57143em;
+  font-size: 2.57143rem;
+  font-weight: 400;
+  margin: 0 0 2.5em;
+  margin: 0 0 2.5rem;
 }
 
 .homepage-btn {
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  font-size: 2.35714rem;
+  font-weight: 900;
+  font-size: 1.78571em;
+  font-size: 1.78571rem;
+  padding: 0.625em 1.875em;
+  padding: 0.625rem 1.875rem;
   color: #003a6e;
   background-color: #fff;
   text-transform: uppercase;
   border-radius: 11px;
+  float: right;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
   .homepage-feature h1 {
-    line-height: 3rem;
+    line-height: 48px;
   }
 
   .feature-heading {
+    font-size: 2.75em;
     font-size: 2.75rem;
+    margin-bottom: 1.875em;
     margin-bottom: 1.875rem;
+  }
+
+  .homepage-btn {
+    font-family: "Karla", "Georgia", "Times New Roman", Times, serif;
+    font-weight: 700;
+    font-size: 1.5625em;
+    font-size: 1.5625rem;
+    padding-left: 0;
+    padding-right: 0;
+    background-color: trasparent;
+    color: #fff;
+    background-color: transparent;
+    float: right;
+  }
+
+  .homepage-btn:active, .homepage-btn:focus, .homepage-btn:hover {
+    color: #fff;
+    text-decoration: underline;
   }
 }
 /* Homepage-feature-caption partial */
@@ -7495,6 +7542,8 @@ header {
   min-height: 1px;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 3.125em;
+  padding-bottom: 3.125em;
   padding-top: 3.125rem;
   padding-bottom: 3.125rem;
   background-color: #000;
@@ -7527,23 +7576,67 @@ header {
   }
 
   .homepage-feature-caption-link {
+    font-size: 1.5625em;
     font-size: 1.5625rem;
-    line-height: 1.875rem;
+    line-height: 30px;
   }
 }
 #homepage-ryor {
+  margin-top: 0.625em;
+  margin-top: 0.625rem;
+  margin-top: 0.625em;
+  margin-top: 0.625rem;
+  position: relative;
+}
+#homepage-ryor .feature-heading {
+  margin: 0 0 0.71429em;
+  margin: 0 0 0.71429rem;
+}
+#homepage-ryor .feature-heading-sub {
+  font-size: 2.57143em;
+  font-size: 2.57143em;
+  font-weight: 400;
+  margin: 0 0 0.71429em;
+  margin: 0 0 0.71429rem;
+}
+#homepage-ryor .feature-text {
+  font-size: 2.14286em;
+  font-size: 2.14286rem;
+  font-weight: 700;
+  margin: 0 0 2.5em;
+  margin: 0 0 2.5rem;
+}
+#homepage-ryor .feature-heading, #homepage-ryor .feature-heading-sub, #homepage-ryor .feature-text {
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.77);
+}
+
+.ryor-student-image-wrap {
   position: relative;
 }
 
 .ryor-student-image {
   width: 100%;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
+  z-index: 0;
+}
+
+/* IMage gradient overlay */
+.ryor-student-image-wrap::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
   z-index: 1;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+80,1+100 */
+  background: -moz-linear-gradient(top, transparent 0%, transparent 80%, black 100%);
+  background: -webkit-linear-gradient(top, transparent 0%, transparent 80%, black 100%);
+  background: linear-gradient(to bottom, transparent 0%, transparent 80%, black 100%);
 }
 
 .ryor-student {
+  position: relative;
   position: relative;
   float: left;
   width: 100%;
@@ -7551,7 +7644,7 @@ header {
   padding-left: 15px;
   padding-right: 15px;
   z-index: 2;
-  padding-top: 3.57143rem;
+  top: calc(-200px);
 }
 
 .ryor-image {
@@ -7565,6 +7658,19 @@ header {
   .ryor-image {
     float: left;
     width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+  #homepage-ryor .feature-heading-sub {
+    font-size: 2.57143em;
+    font-size: 2.57143em;
+    font-weight: 400;
+    margin: 0 0 0.625em;
+    margin: 0 0 0.625rem;
+  }
+  #homepage-ryor .homepage-btn {
+    float: left;
   }
 }
 
